--- a/.gitignore
+++ b/.gitignore
@@ -95,7 +95,6 @@ target/
 profile_default/
 ipython_config.py
 
-
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
@@ -109,9 +108,6 @@ __pypackages__/
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
 
 # Environments
 .env
@@ -160,12 +156,16 @@ pytest.ini
 # Local .terraform directories
 **/.terraform/*
 
-# .tfstate files
+# Terraform files
 *.tfstate
 *.tfstate.*
+.terraform.lock.hcl
 
 # Cloud Function zip
 terraform/*.zip
 
 # env.sh (only example file should be committed)
 env.sh
+
+# VS code configurations
+.vscode
