--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,9 @@
 # limitations under the License.
 
 ---
+default_language_version:
+  python: python3.7
+
 repos:
   - repo: https://github.com/gruntwork-io/pre-commit
     rev: v0.0.9
