--- a/env.sh.example
+++ b/env.sh.example
@@ -14,14 +14,17 @@
 # limitations under the License.
 
 export PAYLOAD=dev.json
-export PIPELINE_FILES_GCS_PATH=gs://<my-bucket>/pipelines
+export PIPELINE_FILES_BUCKET_NAME=jan-pipelines-bucket
+export PIPELINE_ROOT_BUCKET_NAME=jan-pipeline-root-bucket
+export VERTEX_SA_NAME=vertex-pipelines
+
+export PIPELINE_FILES_GCS_PATH=gs://${PIPELINE_FILES_BUCKET_NAME}/pipelines
 # pipeline template - update to any pipelines under the pipelines folder
 # tensorflow or xgboost
-export PIPELINE_TEMPLATE=tensorflow
+export PIPELINE_TEMPLATE=xgboost
 export VERTEX_CMEK_IDENTIFIER= # optional
-export VERTEX_LOCATION=europe-west4
 export VERTEX_REGION=europe-west4
 export VERTEX_NETWORK= # optional
-export VERTEX_PIPELINE_ROOT=gs://<my-bucket>/pipeline_root
-export VERTEX_PROJECT_ID=my-gcp-project
-export VERTEX_SA_EMAIL=vertex-pipeline-runner@my-gcp-project.iam.gserviceaccount.com
+export VERTEX_PIPELINE_ROOT=gs://${PIPELINE_ROOT_BUCKET_NAME}/pipeline_root
+export VERTEX_PROJECT_ID=dt-jan-sandbox-dev
+export VERTEX_SA_EMAIL=${VERTEX_SA_NAME}@${VERTEX_PROJECT_ID}.iam.gserviceaccount.com
