Remove comments and refs to specific project
- Harry PR comment fixes

--- a/env.sh.example
+++ b/env.sh.example
@@ -14,8 +14,8 @@
 # limitations under the License.
 
 export PAYLOAD=dev.json
-export PIPELINE_FILES_BUCKET_NAME=jan-pipelines-bucket
-export PIPELINE_ROOT_BUCKET_NAME=jan-pipeline-root-bucket
+export PIPELINE_FILES_BUCKET_NAME=<my-pipeline-files-bucket>
+export PIPELINE_ROOT_BUCKET_NAME=<my-pipeline-root-bucket>
 export VERTEX_SA_NAME=vertex-pipelines
 
 export PIPELINE_FILES_GCS_PATH=gs://${PIPELINE_FILES_BUCKET_NAME}/pipelines
