--- a/cloudbuild/release.yaml
+++ b/cloudbuild/release.yaml
@@ -29,7 +29,7 @@ steps:
 
   # Copy pipelines and files to a new directory in GCS
   # (via a new local directory)
-  # Directory name = git tag
+  # Directory name = git commit hash
   - name: gcr.io/cloud-builders/gsutil
     entrypoint: bash
     args:
@@ -43,27 +43,4 @@ steps:
         cp -r pipelines/${_PIPELINE_TEMPLATE}/prediction/assets ${TAG_NAME}/prediction/ && \
         gsutil cp -r ${TAG_NAME} ${_PIPELINE_PUBLISH_GCS_PATH}
 
-  # Install Python deps
-  # Run end-to-end (E2E) pipeline tests on both pipelines
-  - name: python:3.7
-    entrypoint: /bin/sh
-    args:
-      - -c
-      - |
-        pip install pipenv && \
-        pipenv install --dev && \
-        make e2e-tests pipeline=training && \
-        make e2e-tests pipeline=prediction
-    env:
-      - VERTEX_LOCATION=${_TEST_VERTEX_LOCATION}
-      - VERTEX_PROJECT_ID=${_TEST_VERTEX_PROJECT_ID}
-      - VERTEX_SA_EMAIL=${_TEST_VERTEX_SA_EMAIL}
-      - VERTEX_CMEK_IDENTIFIER=${_TEST_VERTEX_CMEK_IDENTIFIER}
-      - VERTEX_NETWORK=${_TEST_VERTEX_NETWORK}
-      - PIPELINE_TEMPLATE=${_PIPELINE_TEMPLATE}
-      - PAYLOAD=${_TEST_PAYLOAD}
-      - VERTEX_PIPELINE_ROOT=${_TEST_VERTEX_PIPELINE_ROOT}
-      - PIPELINE_FILES_GCS_PATH=${_PIPELINE_PUBLISH_GCS_PATH}/${TAG_NAME}
-
-# Increase timeout to allow end-to-end (E2E) pipeline tests to run
-timeout: 18000s  # 5 hours
+timeout: 1800s  # 30mins
