--- a/env.sh.example
+++ b/env.sh.example
@@ -13,8 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-export PAYLOAD=dev.json
 export PIPELINE_FILES_GCS_PATH=gs://<my-bucket>/pipelines
+export TRAIN_STATS_GCS_PATH=gs://<my-bucket>/train_stats/train.stats
 # pipeline template - update to any pipelines under the pipelines folder
 # tensorflow or xgboost
 export PIPELINE_TEMPLATE=tensorflow
@@ -23,4 +23,4 @@ export VERTEX_LOCATION=europe-west4
 export VERTEX_NETWORK= # optional
 export VERTEX_PIPELINE_ROOT=gs://<my-bucket>/pipeline_root
 export VERTEX_PROJECT_ID=my-gcp-project
-export VERTEX_SA_EMAIL=vertex-pipeline-runner@my-gcp-project.iam.gserviceaccount.com
+export VERTEX_SA_EMAIL=vertex-pipeline-runner@${VERTEX_PROJECT_ID}.iam.gserviceaccount.com
