Name buckets according to project id
The user no longer has to choose a name for them in env.sh

--- a/env.sh.example
+++ b/env.sh.example
@@ -14,8 +14,10 @@
 # limitations under the License.
 
 export PAYLOAD=dev.json
-export PIPELINE_FILES_BUCKET_NAME=<my-pipeline-files-bucket>
-export PIPELINE_ROOT_BUCKET_NAME=<my-pipeline-root-bucket>
+export VERTEX_PROJECT_ID=<my-dev-project-id>
+
+export PIPELINE_FILES_BUCKET_NAME=${VERTEX_PROJECT_ID}-pipeline-assets-bucket
+export PIPELINE_ROOT_BUCKET_NAME=${VERTEX_PROJECT_ID}-pipeline-root-bucket
 export VERTEX_SA_NAME=vertex-pipelines
 
 export PIPELINE_FILES_GCS_PATH=gs://${PIPELINE_FILES_BUCKET_NAME}/pipelines
@@ -26,5 +28,4 @@ export VERTEX_CMEK_IDENTIFIER= # optional
 export VERTEX_REGION=europe-west4
 export VERTEX_NETWORK= # optional
 export VERTEX_PIPELINE_ROOT=gs://${PIPELINE_ROOT_BUCKET_NAME}/pipeline_root
-export VERTEX_PROJECT_ID=dt-jan-sandbox-dev
 export VERTEX_SA_EMAIL=${VERTEX_SA_NAME}@${VERTEX_PROJECT_ID}.iam.gserviceaccount.com
