--- a/cloudbuild/pr-checks.yaml
+++ b/cloudbuild/pr-checks.yaml
@@ -34,5 +34,8 @@ steps:
       - SKIP=terraform-fmt,git-dirty
       - PIPELINE_TEMPLATE=${_PIPELINE_TEMPLATE}
 
+options:
+  logging: CLOUD_LOGGING_ONLY
+
 # Increase timeout to allow pipenv to resolve dependencies
 timeout: 3600s
