--- a/cloudbuild/release.yaml
+++ b/cloudbuild/release.yaml
@@ -20,10 +20,9 @@ steps:
     args:
       - -c
       - |
-        pip install pipenv && \
-        pipenv install && \
-        make compile pipeline=training && \
-        make compile pipeline=prediction
+        make setup && \
+        make compile-pipeline pipeline=training && \
+        make compile-pipeline pipeline=prediction
     env:
       - PIPELINE_TEMPLATE=${_PIPELINE_TEMPLATE}
 
@@ -37,8 +36,8 @@ steps:
       - |
         mkdir -p ${TAG_NAME}/training/assets && \
         mkdir -p ${TAG_NAME}/prediction/assets && \
-        cp training.json ${TAG_NAME}/training/training.json && \
-        cp prediction.json ${TAG_NAME}/prediction/prediction.json && \
+        cp pipelines/training.json ${TAG_NAME}/training/training.json && \
+        cp pipelines/prediction.json ${TAG_NAME}/prediction/prediction.json && \
         cp -r pipelines/${_PIPELINE_TEMPLATE}/training/assets ${TAG_NAME}/training/ && \
         cp -r pipelines/${_PIPELINE_TEMPLATE}/prediction/assets ${TAG_NAME}/prediction/ && \
         gsutil cp -r ${TAG_NAME} ${_PIPELINE_PUBLISH_GCS_PATH}
