--- a/pipeline_components/_xgboost/Pipfile
+++ b/pipeline_components/_xgboost/Pipfile
@@ -10,6 +10,7 @@ kfp = "==1.8.9"
 pytest = ">=6.2.4,<7.0.0"
 xgboost = "==1.4.2"
 scikit-learn = "==0.24.1"
+joblib = "==1.1.0"
 pandas = "==1.3.2"
 
 [requires]
