--- a/env.sh.example
+++ b/env.sh.example
@@ -13,14 +13,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-export PIPELINE_FILES_GCS_PATH=gs://<my-bucket>/pipelines
-export TRAIN_STATS_GCS_PATH=gs://<my-bucket>/train_stats/train.stats
 # pipeline template - update to any pipelines under the pipelines folder
 # tensorflow or xgboost
 export PIPELINE_TEMPLATE=tensorflow
 export VERTEX_CMEK_IDENTIFIER= # optional
-export VERTEX_LOCATION=europe-west4
+export VERTEX_LOCATION=europe-west2
 export VERTEX_NETWORK= # optional
-export VERTEX_PIPELINE_ROOT=gs://<my-bucket>/pipeline_root
 export VERTEX_PROJECT_ID=my-gcp-project
-export VERTEX_SA_EMAIL=vertex-pipeline-runner@${VERTEX_PROJECT_ID}.iam.gserviceaccount.com
+
+# Leave as-is
+export VERTEX_SA_EMAIL=vertex-pipelines@${VERTEX_PROJECT_ID}.iam.gserviceaccount.com
+export PIPELINE_FILES_GCS_PATH=gs://${VERTEX_PROJECT_ID}-pl-assets
+export VERTEX_PIPELINE_ROOT=gs://${VERTEX_PROJECT_ID}-pl-root
+export TRAIN_STATS_GCS_PATH=${VERTEX_PIPELINE_ROOT}/train_stats/train.stats
