--- a/cloudbuild/release.yaml
+++ b/cloudbuild/release.yaml
@@ -39,8 +39,8 @@ steps:
         mkdir -p ${TAG_NAME}/prediction/assets && \
         cp pipelines/training.json ${TAG_NAME}/training/training.json && \
         cp pipelines/prediction.json ${TAG_NAME}/prediction/prediction.json && \
-        cp -r pipelines/${_PIPELINE_TEMPLATE}/training/assets ${TAG_NAME}/training/ && \
-        cp -r pipelines/${_PIPELINE_TEMPLATE}/prediction/assets ${TAG_NAME}/prediction/ && \
+        cp -r pipelines/pipelines/${_PIPELINE_TEMPLATE}/training/assets ${TAG_NAME}/training/ && \
+        cp -r pipelines/pipelines/${_PIPELINE_TEMPLATE}/prediction/assets ${TAG_NAME}/prediction/ && \
         for dest in ${_PIPELINE_PUBLISH_GCS_PATHS} ; do \
           gsutil cp -r ${TAG_NAME} $$dest ; \
         done
