--- a/cloudbuild/e2e-test.yaml
+++ b/cloudbuild/e2e-test.yaml
@@ -26,7 +26,7 @@ steps:
         mkdir -p ${COMMIT_SHA}/prediction/assets && \
         cp -r pipelines/pipelines/${_PIPELINE_TEMPLATE}/training/assets ${COMMIT_SHA}/training/ && \
         cp -r pipelines/pipelines/${_PIPELINE_TEMPLATE}/prediction/assets ${COMMIT_SHA}/prediction/ && \
-        gsutil cp -r ${COMMIT_SHA} ${_PIPELINE_PUBLISH_GCS_PATH}
+        gsutil cp -r ${COMMIT_SHA} ${PIPELINE_FILES_GCS_PATH}
 
   # Install Python deps
   # Run end-to-end (E2E) pipeline tests on both pipelines
