Update cloud build actions

--- a/cloudbuild/pr-checks.yaml
+++ b/cloudbuild/pr-checks.yaml
@@ -26,10 +26,10 @@ steps:
         git init && \
         git add . && \
         make pre-commit && \
-        make compile-all-components && \
-        make test-all-components && \
         make compile-pipeline pipeline=training && \
-        make compile-pipeline pipeline=prediction
+        make compile-pipeline pipeline=prediction && \
+        make setup-all-components && \
+        make test-all-components
     env:
       - SKIP=terraform-fmt,git-dirty
       - PIPELINE_TEMPLATE=${_PIPELINE_TEMPLATE}
