--- a/cloudbuild/e2e-test.yaml
+++ b/cloudbuild/e2e-test.yaml
@@ -39,7 +39,7 @@ steps:
         make compile-pipeline pipeline=training && \
         make compile-pipeline pipeline=prediction && \
         make e2e-tests PIPELINE_TEMPLATE=${_PIPELINE_TEMPLATE} pipeline=training enable_pipeline_caching=${_TEST_ENABLE_PIPELINE_CACHING} && \
-        make e2e-tests PIPELINE_TEMPLATE=${_PIPELINE_TEMPLATE} pipeline=prediction enable_pipeline_caching=${_TEST_ENABLE_PIPELINE_CACHING} &&
+        make e2e-tests PIPELINE_TEMPLATE=${_PIPELINE_TEMPLATE} pipeline=prediction enable_pipeline_caching=${_TEST_ENABLE_PIPELINE_CACHING}
     env:
       - VERTEX_LOCATION=${_TEST_VERTEX_LOCATION}
       - VERTEX_PROJECT_ID=${_TEST_VERTEX_PROJECT_ID}
