--- a/cloudbuild/e2e-test.yaml
+++ b/cloudbuild/e2e-test.yaml
@@ -38,8 +38,9 @@ steps:
         make setup && \
         make compile-pipeline pipeline=training && \
         make compile-pipeline pipeline=prediction && \
-        make e2e-tests PIPELINE_TEMPLATE=${_PIPELINE_TEMPLATE} pipeline=training enable_pipeline_caching=${_TEST_ENABLE_PIPELINE_CACHING} && \
-        make e2e-tests PIPELINE_TEMPLATE=${_PIPELINE_TEMPLATE} pipeline=prediction enable_pipeline_caching=${_TEST_ENABLE_PIPELINE_CACHING}
+        cd pipelines && \
+        pipenv run python -m pytest --log-cli-level=INFO tests/${_PIPELINE_TEMPLATE}/training --enable_caching=${_TEST_ENABLE_PIPELINE_CACHING} && \
+        pipenv run python -m pytest --log-cli-level=INFO tests/${_PIPELINE_TEMPLATE}/prediction --enable_caching=${_TEST_ENABLE_PIPELINE_CACHING}
     env:
       - VERTEX_LOCATION=${_TEST_VERTEX_LOCATION}
       - VERTEX_PROJECT_ID=${_TEST_VERTEX_PROJECT_ID}
