--- a/aiplatform-components/Pipfile
+++ b/aiplatform-components/Pipfile
@@ -9,7 +9,7 @@ kfp = "==1.8.21"
 [dev-packages]
 google-cloud-aiplatform = ">= 1.24.1,<2.0.0"
 google-cloud-pipeline-components = ">= 1.0.0,<2.0.0"
-pytest = "==7.3.1"
+pytest = ">=7.3.1,<8.0.0"
 pre-commit = ">=2.14.1,<3.0.0"
 
 [requires]
