--- a/bigquery-components/Pipfile
+++ b/bigquery-components/Pipfile
@@ -8,7 +8,7 @@ kfp = "==1.8.21"
 
 [dev-packages]
 google-cloud-bigquery = "==2.30.0"
-pytest = "==7.3.1"
+pytest = ">=7.3.1,<8.0.0"
 
 [requires]
 python_version = "3.7"
