--- a/bigquery-components/pyproject.toml
+++ b/bigquery-components/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
 [project.optional-dependencies]
 tests = [
     "google-cloud-bigquery == 2.30.0",
-    "pytest == 7.3.1",
+    "pytest >= 7.3.1,<8.0.0",
 ]
 
 [build-system]
