--- a/pipelines/Pipfile
+++ b/pipelines/Pipfile
@@ -12,7 +12,7 @@ aiplatform-components = {editable = true, path = "./../aiplatform-components"}
 bigquery-components = {editable = true, path = "./../bigquery-components"}
 
 [dev-packages]
-pytest = "==7.3.1"
+pytest = ">=7.3.1,<8.0.0"
 pre-commit = ">=2.14.1,<3.0.0"
 
 [requires]
