--- a/pipelines/Pipfile
+++ b/pipelines/Pipfile
@@ -8,8 +8,8 @@ kfp = "==1.8.21"
 google-cloud-pipeline-components = ">=1.0.0,<2.0.0"
 google-cloud-aiplatform = ">=1.24.1,<2.0.0"
 Jinja2 = ">=3.0.1,<4.0.0"
-aiplatform-components = {editable = true, path = "./../aiplatform-components"}
-bigquery-components = {editable = true, path = "./../bigquery-components"}
+aiplatform-components = {editable = true, path = "./../components/aiplatform-components"}
+bigquery-components = {editable = true, path = "./../components/bigquery-components"}
 
 [dev-packages]
 pytest = ">=7.3.1,<8.0.0"
