--- a/.gitignore
+++ b/.gitignore
@@ -170,5 +170,5 @@ env.sh
 # VS code configurations
 .vscode
 
-# Compiled pipeline components
-**/component.yaml
+# Compiled pipelines
+**/*pipeline.json
