--- a/components/aiplatform-components/pyproject.toml
+++ b/components/aiplatform-components/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "aiplatform-components"
 authors = [
-    {name = "Felix Schaumann", email = "felix.schaumann@datatonic.com"},
+    {name = "Example User", email = "user@example.com"},
 ]
 description = "AI Platform components"
 readme = "README.md"
