--- a/pipelines/pyproject.toml
+++ b/pipelines/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "turbo-template"
 authors = [
-    {name = "Felix Schaumann", email = "felix.schaumann@datatonic.com"},
+    {name = "Example User", email = "user@example.com"},
 ]
 description = "Turbo Template"
 readme = "README.md"
