--- a/pipelines/pyproject.toml
+++ b/pipelines/pyproject.toml
@@ -16,12 +16,9 @@ Jinja2 = ">=3.0.1,<4.0.0"
 google-cloud-aiplatform = "1.24.1"
 google-cloud-pipeline-components = "1.0.42"
 
-
-[project.optional-dependencies]
-tests = [
-    "google-cloud-bigquery == 2.30.0",
-    "pytest >= 7.3.1,<8.0.0",
-]
+[tool.poetry.group.dev.dependencies]
+pytest = ">=7.3.1,<8.0.0"
+pre-commit = ">=2.14.1,<3.0.0"
 
 [build-system]
 requires = ["setuptools", "wheel"]
