--- a/pipelines/pyproject.toml
+++ b/pipelines/pyproject.toml
@@ -20,10 +20,6 @@ google-cloud-pipeline-components = "1.0.42"
 pytest = ">=7.3.1,<8.0.0"
 pre-commit = ">=2.14.1,<3.0.0"
 
-[build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta:__legacy__"
-
 [tool.flake8]
 max-line-length = 88
 per-file-ignores = [
@@ -41,3 +37,7 @@ pythonpath = [
 ]
 testpaths = "tests"
 junit_family = "xunit2"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
