--- a/components/vertex-components/pyproject.toml
+++ b/components/vertex-components/pyproject.toml
@@ -1,32 +1,28 @@
-[project]
+[tool.poetry]
 name = "vertex-components"
-authors = [
-    {name = "Example User", email = "user@example.com"},
-]
-description = "Vertex AI components"
+version = "0.1.0"
+authors = ["roberta nwokonko <roberta.nwokonko@datatonic.com>"]
+description = "Vertex AI components made by Datatonic"
 readme = "README.md"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "Programming Language :: Python :: 3.7",
-]
-requires-python = ">=3.7"
-dynamic = ["version"]
-dependencies = [
-    "kfp == 1.8.21",
+    "Programming Language :: Python :: 3.9",
 ]
 
-[project.optional-dependencies]
-tests = [
-    "google-cloud-aiplatform == 1.24.1",
-    "google-cloud-pipeline-components == 1.0.42",
-    "pytest >= 7.3.1,<8.0.0",
-    "pre-commit >= 2.14.1,<3.0.0",
-]
+[tool.poetry.dependencies]
+python = ">=3.9,<3.11"
+google-cloud-aiplatform = "1.24.1"
+google-cloud-pipeline-components = "1.0.42"
+kfp = "==1.8.21"
+
+[tool.poetry.group.dev.dependencies]
+pytest = ">=7.3.1,<8.0.0"
+pre-commit = ">=2.14.1,<3.0.0"
 
 [build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta:__legacy__"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.flake8]
 max-line-length = 88
@@ -45,3 +41,4 @@ pythonpath = [
 ]
 testpaths = "tests"
 junit_family = "xunit2"
+
