--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,15 @@
 [tool.poetry]
 name = "turbo-template"
 version = "0.1.0"
-authors = ["roberta nwokonko <roberta.nwokonko@datatonic.com>"]
 description = "Turbo Template developed at Datatonic"
-readme = "README.md"
-classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Intended Audience :: Developers",
-    "Programming Language :: Python :: 3.9",
-]
+authors = ["roberta nwokonko <roberta.nwokonko@datatonic.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
 Jinja2 = ">=3.0.1,<4.0.0"
 google-cloud-aiplatform = "1.24.1"
 google-cloud-pipeline-components = "1.0.42"
+kfp = "1.8.21"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.3.1,<8.0.0"
@@ -24,21 +19,8 @@ pre-commit = ">=2.14.1,<3.0.0"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.flake8]
-max-line-length = 88
-per-file-ignores = [
-    "E203",
-    "F841"
-]
-ignore = [
-    "E203",
-    "F841",
-]
-
 [tool.pytest.ini_options]
 pythonpath = [
-  "src"
+  ".",
 ]
-testpaths = "tests"
-junit_family = "xunit2"
 
