--- a/pipelines/Pipfile
+++ b/pipelines/Pipfile
@@ -14,6 +14,7 @@ bigquery-components = {editable = true, path = "./../components/bigquery-compone
 [dev-packages]
 pytest = ">=7.3.1,<8.0.0"
 pre-commit = ">=2.14.1,<3.0.0"
+coverage = "==7.2.5"
 
 [requires]
 python_version = "3.7"
