--- a/pipelines/pyproject.toml
+++ b/pipelines/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = [
     {name = "Example User", email = "user@example.com"},
 ]
-description = "Turbo Template developed at Datatonic"
+description = "Turbo Template"
 readme = "README.md"
 classifiers = [
     "Development Status :: 3 - Alpha",
