feat: changes to release ci

--- a/cloudbuild/release.yaml
+++ b/cloudbuild/release.yaml
@@ -21,7 +21,6 @@ steps:
       - -c
       - |
         make setup && \
-        make compile-all-components && \
         make compile-pipeline pipeline=training && \
         make compile-pipeline pipeline=prediction
     env:
@@ -36,8 +35,8 @@ steps:
       - -c
       - |
         mkdir -p ${TAG_NAME}/assets && \
-        cp pipelines/training.json ${TAG_NAME}/training.json && \
-        cp pipelines/prediction.json ${TAG_NAME}/prediction.json && \
+        cp pipelines/src/training.json ${TAG_NAME}/training.json && \
+        cp pipelines/src/prediction.json ${TAG_NAME}/prediction.json && \
         cp -r pipelines/assets ${TAG_NAME}/assets && \
         for dest in ${_PIPELINE_PUBLISH_GCS_PATHS} ; do \
           gsutil cp -r ${TAG_NAME} $$dest ; \
