refactor(.pre-commit-config.yaml): fix pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,10 +32,10 @@ repos:
       - id: no-commit-to-branch
         args: [--branch, main]
 
-  # - repo: https://github.com/jumanjihouse/pre-commit-hooks
-  #   rev: 1.11.0
-  #   hooks:
-  #     - id: git-dirty
+  - repo: https://github.com/jumanjihouse/pre-commit-hooks
+    rev: 1.11.0
+    hooks:
+      - id: git-dirty
 
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.26.3
