--- a/components/bigquery-components/pyproject.toml
+++ b/components/bigquery-components/pyproject.toml
@@ -1,9 +1,7 @@
 [tool.poetry]
 name = "bigquery-components"
 version = "0.1.0"
-authors = [
-    {name = "Example User", email = "user@example.com"},
-]
+authors = ["Example User <user@example.com>"]
 description = "Bigquery components for vertex pipelines"
 readme = "README.md"
 classifiers = [
