--- a/pipelines/pyproject.toml
+++ b/pipelines/pyproject.toml
@@ -15,6 +15,8 @@ python = "^3.9"
 Jinja2 = ">=3.0.1,<4.0.0"
 google-cloud-aiplatform = "1.24.1"
 google-cloud-pipeline-components = "1.0.42"
+pytest = "^7.3.1"
+
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.3.1,<8.0.0"
