--- a/pipelines/pyproject.toml
+++ b/pipelines/pyproject.toml
@@ -9,13 +9,20 @@ classifiers = [
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3.9",
 ]
+packages = [
+    { include = "pipelines", from = "src" },
+]
+
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.11"
 Jinja2 = ">=3.0.1,<4.0.0"
 google-cloud-aiplatform = "1.24.1"
 google-cloud-pipeline-components = "1.0.42"
 pytest = "^7.3.1"
+bigquery-components = { path = "../components/bigquery-components", develop = true }
+vertex-components = { path = "../components/vertex-components", develop = true }
+
 
 
 [tool.poetry.group.dev.dependencies]
