--- a/cloudbuild/pr-checks.yaml
+++ b/cloudbuild/pr-checks.yaml
@@ -14,7 +14,7 @@
 ---
 steps:
 
-  # Install pipenv and deps, run pre-commit and unit tests
+  # Install poetry and deps, run pre-commit and unit tests
   # Then compile pipelines (to make sure they can compile)
   # need to run "git init" for pre-commit checks to work
   - name: python:3.9
