style(pyproject.toml): change description

--- a/components/vertex-components/pyproject.toml
+++ b/components/vertex-components/pyproject.toml
@@ -2,7 +2,7 @@
 name = "vertex-components"
 version = "0.1.0"
 authors = ["Example User <user@example.com>"]
-description = "KFP components for interacting with Vertex AI"
+description = "KubeFlow components for Vertex AI"
 readme = "README.md"
 classifiers = [
     "Development Status :: 3 - Alpha",
