--- a/env.sh.example
+++ b/env.sh.example
@@ -20,6 +20,7 @@ export VERTEX_CMEK_IDENTIFIER= # optional
 export VERTEX_LOCATION=europe-west2
 export VERTEX_NETWORK= # optional
 export VERTEX_PROJECT_ID=my-gcp-project
+export ADDITIONAL_SUFFIX= # optional, add underscore for better readability e.g. _suffix
 
 # Leave as-is
 export VERTEX_SA_EMAIL=vertex-pipelines@${VERTEX_PROJECT_ID}.iam.gserviceaccount.com
