--- a/pipelines/pyproject.toml
+++ b/pipelines/pyproject.toml
@@ -24,6 +24,7 @@ vertex-components = { path = "../components/vertex-components", develop = true }
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.3.1,<8.0.0"
 pre-commit = ">=2.14.1,<3.0.0"
+coverage = "==7.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
