--- a/env.sh.example
+++ b/env.sh.example
@@ -24,5 +24,5 @@ export ADDITIONAL_SUFFIX= # optional, additional suffix (e.g. _<your name>) for 
 
 # Leave as-is
 export VERTEX_SA_EMAIL=vertex-pipelines@${VERTEX_PROJECT_ID}.iam.gserviceaccount.com
-export PIPELINE_FILES_GCS_PATH=gs://${VERTEX_PROJECT_ID}-pl-assets
+export PIPELINE_FILES_GCS_PATH=gs://${VERTEX_PROJECT_ID}-pl-assets/assets${ADDITIONAL_SUFFIX}
 export VERTEX_PIPELINE_ROOT=gs://${VERTEX_PROJECT_ID}-pl-root
