--- a/env.sh.example
+++ b/env.sh.example
@@ -20,7 +20,9 @@ export VERTEX_CMEK_IDENTIFIER= # optional
 export VERTEX_LOCATION=europe-west2
 export VERTEX_NETWORK= # optional
 export VERTEX_PROJECT_ID=my-gcp-project
-export ADDITIONAL_SUFFIX= # optional, additional suffix (e.g. _<your name>) for BQ and GCS outputs to prevent developers overwriting them when working in the same Google Cloud Project.
+
+# Suffix to facilitate running concurrent pipelines in the same Google Cloud project. Uncomment if working in a team to avoid overwriting resources during development 
+# export RESOURCE_SUFFIX=_$(git config --get user.name)
 
 # Leave as-is
 export VERTEX_SA_EMAIL=vertex-pipelines@${VERTEX_PROJECT_ID}.iam.gserviceaccount.com
