Remove TF pipeline and introduce configs

--- a/cloudbuild/e2e-test.yaml
+++ b/cloudbuild/e2e-test.yaml
@@ -41,8 +41,7 @@ steps:
       - VERTEX_PROJECT_ID=${_TEST_VERTEX_PROJECT_ID}
       - VERTEX_SA_EMAIL=${_TEST_VERTEX_SA_EMAIL}
       - VERTEX_CMEK_IDENTIFIER=${_TEST_VERTEX_CMEK_IDENTIFIER}
-      - VERTEX_NETWORK=${_TEST_VERTEX_NETWORK}
-      - PIPELINE_TEMPLATE=${_PIPELINE_TEMPLATE}
+      - VERTEX_NETWORK=${_TEST_VERTEX_NETWORK
       - VERTEX_PIPELINE_ROOT=${_TEST_VERTEX_PIPELINE_ROOT}
       - PIPELINE_FILES_GCS_PATH=${_PIPELINE_PUBLISH_GCS_PATH}/${COMMIT_SHA}
 
