Revert PIPELINE_GCS_PATH to NOT include assets subdirectory

--- a/cloudbuild/e2e-test.yaml
+++ b/cloudbuild/e2e-test.yaml
@@ -44,8 +44,8 @@ steps:
       - VERTEX_NETWORK=${_TEST_VERTEX_NETWORK}
       - PIPELINE_TEMPLATE=${_PIPELINE_TEMPLATE}
       - VERTEX_PIPELINE_ROOT=${_TEST_VERTEX_PIPELINE_ROOT}
-      - PIPELINE_FILES_GCS_PATH=${_PIPELINE_PUBLISH_GCS_PATH}/${COMMIT_SHA}/assets
-      - RESOURCE_SUFFIX=_${SHORT_SHA}
+      - PIPELINE_FILES_GCS_PATH=${_PIPELINE_PUBLISH_GCS_PATH}/${COMMIT_SHA}
+      - RESOURCE_SUFFIX=_${COMMIT_SHA}
 
 options:
   logging: CLOUD_LOGGING_ONLY
