--- a/env.sh.example
+++ b/env.sh.example
@@ -21,7 +21,7 @@ export VERTEX_LOCATION=europe-west2
 export VERTEX_NETWORK= # optional
 export VERTEX_PROJECT_ID=my-gcp-project
 
-# Suffix (e.g. _<your name>) to facilitate running concurrent pipelines in the same Google Cloud project. Populate if working in a team to avoid overwriting resources during development 
+# Suffix (e.g. '_<your name>') to facilitate running concurrent pipelines in the same Google Cloud project. Populate if working in a team to avoid overwriting resources during development 
 export RESOURCE_SUFFIX=
 
 # Leave as-is
