revert changes made to pipeline_files_gcs_path in scheduled_jobs.auto.tfvars.example

--- a/terraform/modules/scheduled_pipelines/scheduled_jobs.auto.tfvars.example
+++ b/terraform/modules/scheduled_pipelines/scheduled_jobs.auto.tfvars.example
@@ -26,7 +26,7 @@ cloud_schedulers_config = {
     pipeline_parameters = {
       project_id = "my-project-id"
       project_location = "europe-west2"
-      pipeline_files_gcs_path = "gs://my-assets-bucket/<Git tag>/assets"
+      pipeline_files_gcs_path = "gs://my-assets-bucket/<Git tag>"
       ingestion_project_id = "my-project-id"
       model_name = "xgboost_with_preprocessing"
       model_label = "label_name"
@@ -49,7 +49,7 @@ cloud_schedulers_config = {
     pipeline_parameters = {
       project_id = "my-project-id"
       project_location = "europe-west4"
-      pipeline_files_gcs_path = "gs://my-assets-bucket/<Git tag>/assets"
+      pipeline_files_gcs_path = "gs://my-assets-bucket/<Git tag>"
       ingestion_project_id = "my-project-id"
       model_name = "xgboost_with_preprocessing"
       model_label = "label_name"
@@ -70,12 +70,12 @@ cloud_schedulers_config = {
     description  = "Trigger my TensorFlow training pipeline in Vertex"
     schedule     = "0 0 * * 0"
     time_zone    = "UTC"
-    template_path = "gs://my-assets-bucket/<Git tag>/assets/training/training.json"
+    template_path = "gs://my-assets-bucket/<Git tag>/training/training.json"
     enable_caching = null
     pipeline_parameters = {
       project_id = "my-project-id"
       project_location = "europe-west4"
-      pipeline_files_gcs_path = "gs://my-assets-bucket/<Git tag>/assets"
+      pipeline_files_gcs_path = "gs://my-assets-bucket/<Git tag>"
       ingestion_project_id = "my-project-id"
       model_name = "tensorflow_with_preprocessing"
       model_label = "label_name"
@@ -98,7 +98,7 @@ cloud_schedulers_config = {
     pipeline_parameters = {
       project_id = "my-project-id"
       project_location = "europe-west4"
-      pipeline_files_gcs_path = "gs://my-assets-bucket/<Git tag>/assets"
+      pipeline_files_gcs_path = "gs://my-assets-bucket/<Git tag>"
       ingestion_project_id = "my-project-id"
       model_name = "tensorflow_with_preprocessing"
       model_label = "label_name"
