Fix RESOURCE_SUFFIX bug

--- a/env.sh.example
+++ b/env.sh.example
@@ -26,5 +26,5 @@ export RESOURCE_SUFFIX=
 
 # Leave as-is
 export VERTEX_SA_EMAIL=vertex-pipelines@${VERTEX_PROJECT_ID}.iam.gserviceaccount.com
-export PIPELINE_FILES_GCS_PATH=gs://${VERTEX_PROJECT_ID}-pl-assets/${RESOURCE_SUFFIX}
+export PIPELINE_FILES_GCS_PATH="gs://${VERTEX_PROJECT_ID}-pl-assets"
 export VERTEX_PIPELINE_ROOT=gs://${VERTEX_PROJECT_ID}-pl-root
