remove underscore from suffix in env.sh.example and adjust pipelines to add it for BigQuery tables

--- a/env.sh.example
+++ b/env.sh.example
@@ -21,8 +21,8 @@ export VERTEX_LOCATION=europe-west2
 export VERTEX_NETWORK= # optional
 export VERTEX_PROJECT_ID=my-gcp-project
 
-# Suffix (e.g. '_<your name>') to facilitate running concurrent pipelines in the same Google Cloud project. Change if working in a team to avoid overwriting resources during development 
-export RESOURCE_SUFFIX=_default
+# Suffix (e.g. '<your name>') to facilitate running concurrent pipelines in the same Google Cloud project. Change if working in a team to avoid overwriting resources during development 
+export RESOURCE_SUFFIX=default
 
 # Leave as-is
 export VERTEX_SA_EMAIL=vertex-pipelines@${VERTEX_PROJECT_ID}.iam.gserviceaccount.com
