--- a/cloudbuild/e2e-test.yaml
+++ b/cloudbuild/e2e-test.yaml
@@ -45,7 +45,7 @@ steps:
       - PIPELINE_TEMPLATE=${_PIPELINE_TEMPLATE}
       - VERTEX_PIPELINE_ROOT=${_TEST_VERTEX_PIPELINE_ROOT}
       - PIPELINE_FILES_GCS_PATH=${_PIPELINE_PUBLISH_GCS_PATH}/${COMMIT_SHA}
-      - RESOURCE_SUFFIX=_${COMMIT_SHA}
+      - RESOURCE_SUFFIX=${COMMIT_SHA}
 
 options:
   logging: CLOUD_LOGGING_ONLY
