--- a/components/bigquery-components/pyproject.toml
+++ b/components/bigquery-components/pyproject.toml
@@ -12,7 +12,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.7,<3.11"
-kfp = "==1.8.21"
+kfp = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 google-cloud-bigquery = "2.30.0"
