--- a/terraform/modules/scheduled_pipelines/scheduled_jobs.auto.tfvars.example
+++ b/terraform/modules/scheduled_pipelines/scheduled_jobs.auto.tfvars.example
@@ -21,17 +21,14 @@ cloud_schedulers_config = {
     description  = "Trigger my XGBoost training pipeline in Vertex"
     schedule     = "0 0 * * 0"
     time_zone    = "UTC"
-    template_path = "gs://my-assets-bucket/<Git tag>/training/training.json"
+    template_path = "https://<GCP region>-kfp.pkg.dev/<Project ID of test project>/vertex-pipelines/xgboost-train-pipeline/<Git tag>"
     enable_caching = null
     pipeline_parameters = {
       project_id = "my-project-id"
       project_location = "europe-west2"
-      pipeline_files_gcs_path = "gs://my-assets-bucket/<Git tag>"
       ingestion_project_id = "my-project-id"
       model_name = "xgboost_with_preprocessing"
       model_label = "label_name"
-      tfdv_schema_filename = "tfdv_schema_training.pbtxt"
-      tfdv_train_stats_path = "gs://my-pipeline-root-bucket/train_stats/train.stats"
       dataset_id = "preprocessing"
       dataset_location = "europe-west2"
       ingestion_dataset_id = "chicago_taxi_trips"
@@ -44,17 +41,14 @@ cloud_schedulers_config = {
     description  = "Trigger my XGBoost prediction pipeline in Vertex"
     schedule     = "0 0 * * 0"
     time_zone    = "UTC"
-    template_path = "gs://my-assets-bucket/<Git tag>/prediction/prediction.json"
+    template_path = "https://<GCP region>-kfp.pkg.dev/<Project ID of test project>/vertex-pipelines/xgboost-prediction-pipeline/<Git tag>"
     enable_caching = null
     pipeline_parameters = {
       project_id = "my-project-id"
       project_location = "europe-west4"
-      pipeline_files_gcs_path = "gs://my-assets-bucket/<Git tag>"
       ingestion_project_id = "my-project-id"
       model_name = "xgboost_with_preprocessing"
       model_label = "label_name"
-      tfdv_schema_filename = "tfdv_schema_training.pbtxt"
-      tfdv_train_stats_path = "gs://my-pipeline-root-bucket/train_stats/train.stats"
       dataset_id = "preprocessing"
       dataset_location = "europe-west2"
       ingestion_dataset_id = "chicago_taxi_trips"
@@ -70,17 +64,14 @@ cloud_schedulers_config = {
     description  = "Trigger my TensorFlow training pipeline in Vertex"
     schedule     = "0 0 * * 0"
     time_zone    = "UTC"
-    template_path = "gs://my-assets-bucket/<Git tag>/training/training.json"
+    template_path = "https://<GCP region>-kfp.pkg.dev/<Project ID of test project>/vertex-pipelines/tensorflow-train-pipeline/<Git tag>"
     enable_caching = null
     pipeline_parameters = {
       project_id = "my-project-id"
       project_location = "europe-west4"
-      pipeline_files_gcs_path = "gs://my-assets-bucket/<Git tag>"
       ingestion_project_id = "my-project-id"
       model_name = "tensorflow_with_preprocessing"
       model_label = "label_name"
-      tfdv_schema_filename = "tfdv_schema_training.pbtxt"
-      tfdv_train_stats_path = "gs://my-pipeline-root-bucket/train_stats/train.stats"
       dataset_id = "preprocessing"
       dataset_location = "europe-west2"
       ingestion_dataset_id = "chicago_taxi_trips"
@@ -93,17 +84,14 @@ cloud_schedulers_config = {
     description  = "Trigger my TensorFlow prediction pipeline in Vertex"
     schedule     = "0 0 * * 0"
     time_zone    = "UTC"
-    template_path = "gs://my-assets-bucket/<Git tag>/prediction/prediction.json"
+    template_path = "https://<GCP region>-kfp.pkg.dev/<Project ID of test project>/vertex-pipelines/tensorflow-prediction-pipeline/<Git tag>"
     enable_caching = null
     pipeline_parameters = {
       project_id = "my-project-id"
       project_location = "europe-west4"
-      pipeline_files_gcs_path = "gs://my-assets-bucket/<Git tag>"
       ingestion_project_id = "my-project-id"
       model_name = "tensorflow_with_preprocessing"
       model_label = "label_name"
-      tfdv_schema_filename = "tfdv_schema_training.pbtxt"
-      tfdv_train_stats_path = "gs://my-pipeline-root-bucket/train_stats/train.stats"
       dataset_id = "preprocessing"
       dataset_location = "europe-west2"
       ingestion_dataset_id = "chicago_taxi_trips"
