--- a/terraform/modules/scheduled_pipelines/scheduled_jobs.auto.tfvars.example
+++ b/terraform/modules/scheduled_pipelines/scheduled_jobs.auto.tfvars.example
@@ -18,7 +18,7 @@ cloud_schedulers_config = {
 
   xgboost_training = {
     name         = "xgboost-training-pipeline-trigger"
-    description  = "Trigger my XGBoost training pipeline in Vertex"
+    description  = "Trigger my training pipeline in Vertex"
     schedule     = "0 0 * * 0"
     time_zone    = "UTC"
     template_path = "https://<GCP region>-kfp.pkg.dev/<Project ID of test project>/vertex-pipelines/xgboost-train-pipeline/<Git tag>"
@@ -33,12 +33,12 @@ cloud_schedulers_config = {
       dataset_location = "europe-west2"
       ingestion_dataset_id = "chicago_taxi_trips"
       timestamp = "2022-12-01 00:00:00"
-    },
+    }
   },
 
   xgboost_prediction = {
     name         = "xgboost-prediction-pipeline-trigger"
-    description  = "Trigger my XGBoost prediction pipeline in Vertex"
+    description  = "Trigger my prediction pipeline in Vertex"
     schedule     = "0 0 * * 0"
     time_zone    = "UTC"
     template_path = "https://<GCP region>-kfp.pkg.dev/<Project ID of test project>/vertex-pipelines/xgboost-prediction-pipeline/<Git tag>"
@@ -56,49 +56,6 @@ cloud_schedulers_config = {
       batch_prediction_machine_type = "n1-standard-4"
       batch_prediction_min_replicas = 3
       batch_prediction_max_replicas = 5
-    },
-  },
-
-  tensorflow_training = {
-    name         = "tensorflow-training-pipeline-trigger"
-    description  = "Trigger my TensorFlow training pipeline in Vertex"
-    schedule     = "0 0 * * 0"
-    time_zone    = "UTC"
-    template_path = "https://<GCP region>-kfp.pkg.dev/<Project ID of test project>/vertex-pipelines/tensorflow-train-pipeline/<Git tag>"
-    enable_caching = null
-    pipeline_parameters = {
-      project_id = "my-project-id"
-      project_location = "europe-west4"
-      ingestion_project_id = "my-project-id"
-      model_name = "tensorflow_with_preprocessing"
-      model_label = "label_name"
-      dataset_id = "preprocessing"
-      dataset_location = "europe-west2"
-      ingestion_dataset_id = "chicago_taxi_trips"
-      timestamp = "2022-12-01 00:00:00"
-    },
-  },
-
-  tensorflow_prediction = {
-    name         = "tensorflow-prediction-pipeline-trigger"
-    description  = "Trigger my TensorFlow prediction pipeline in Vertex"
-    schedule     = "0 0 * * 0"
-    time_zone    = "UTC"
-    template_path = "https://<GCP region>-kfp.pkg.dev/<Project ID of test project>/vertex-pipelines/tensorflow-prediction-pipeline/<Git tag>"
-    enable_caching = null
-    pipeline_parameters = {
-      project_id = "my-project-id"
-      project_location = "europe-west4"
-      ingestion_project_id = "my-project-id"
-      model_name = "tensorflow_with_preprocessing"
-      model_label = "label_name"
-      dataset_id = "preprocessing"
-      dataset_location = "europe-west2"
-      ingestion_dataset_id = "chicago_taxi_trips"
-      timestamp = "2022-12-01 00:00:00"
-      batch_prediction_machine_type = "n1-standard-4"
-      batch_prediction_min_replicas = 3
-      batch_prediction_max_replicas = 5
-    },
-  },
+    }
+  }
 }
